--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -54,14 +54,14 @@
 
 <div class="cards">
     <div class="card" id="card1">
-    <img src="/assets/imagens/cardimgs/idmarca.png" alt="serviço7" id="img7">
+    <img src="/assets/imagens/cardimgs/devsites.png" alt="serviço7" id="img7">
     <h1 id="">Criação de Sites</h1>
     <p>Desenvolvemos sites incríveis, desde landing pages até projetos mais complexos, para proporcionar uma presença online eficaz e atraente para o seu público-alvo.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
     <div class="card"  id="card2">
-    <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
+    <img src="/assets/imagens/cardimgs/designdigital.png" alt="serviço4" id="img4">
     <h1>Design Digital</h1>
     <p>Criamos experiências visuais que deixam uma marca duradoura. Dos pixels à emoção, nossos designs digitais não apenas atraem, mas também envolvem seu público, proporcionando uma presença online única e inesquecível.</p>
     <a href="#">Saiba mais.</a>
@@ -82,7 +82,7 @@
 </div>
 
     <div class="card"  id="card5">
-    <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
+    <img src="/assets/imagens/cardimgs/perform.png" alt="serviço4" id="img4">
     <h1>Performance Marketing</h1>
     <p>Mais do que campanhas, criamos experiências envolventes. Nosso foco é impulsionar o desempenho, gerando resultados tangíveis. Cada campanha é uma jornada estratégica que leva seus clientes a uma conexão mais profunda com sua marca.</p>
     <a href="#">Saiba mais.</a>
@@ -96,23 +96,23 @@
 </div>
 
     <div class="card"  id="card7">
-    <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
+    <img src="/assets/imagens/cardimgs/seo.png" alt="serviço4" id="img4">
     <h1>SEO/Tráfego pago</h1>
     <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
  <div class="card"  id="card8">
-    <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
+    <img src="/assets/imagens/cardimgs/extra.png" alt="serviço4" id="img4">
     <h1>extra</h1>
-    <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eligendi error inventore dicta vel consectetur ad excepturi mollitia aliquid, ea, explicabo facere dolorem numquam velit repudiandae amet, voluptas facilis perferendis?</p>
     <a href="#">Saiba mais.</a>
 </div>
 
 <div class="card"  id="card9">
-    <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
+    <img src="/assets/imagens/cardimgs/extra.png" alt="serviço4" id="img4">
     <h1>extra</h1>
-    <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quibusdam pariatur autem fugiat dolorem. Sit, voluptatibus a harum voluptatum omnis commodi saepe aspernatur enim ab laboriosam iusto quibusdam impedit doloremque.</p>
     <a href="#">Saiba mais.</a>
 </div>
 </div>
