--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -48,7 +48,7 @@
     <div id="diferenciais">
         <h5>Nossos Diferenciais</h5>
     
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, reiciendis eius! Aliquid, corporis sequi illo doloremque vitae itaque ipsa. Aperiam unde veniam blanditiis nulla deserunt minus qui laborum, veritatis molestias.</p>
+        <p>Somos impulsionados pela inovação constante, proporcionando soluções criativas. Oferecemos atendimento personalizado, compreendendo suas necessidades de maneira única. Estabelecemos uma relação de confiança, compartilhando informações de forma transparente. Compromisso sustentável é parte integrante, alinhando sua marca a valores éticos. Nossa abordagem mensurável foca em resultados concretos, adaptando estratégias para otimizar o desempenho.</p>
     </div>
 </article>
 
@@ -103,16 +103,16 @@
 </div>
 
  <div class="card"  id="card8">
-    <img src="/assets/imagens/cardimgs/extra.png" alt="serviço4" id="img4">
-    <h1>extra</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eligendi error inventore dicta vel consectetur ad excepturi mollitia aliquid, ea, explicabo facere dolorem numquam velit repudiandae amet, voluptas facilis perferendis?</p>
+    <img src="/assets/imagens/cardimgs/ass-imprensa.png" alt="serviço4" id="img4">
+    <h1>Assessoria de Imprensa</h1>
+    <p>A Bridge Assessoria Digital otimiza a visibilidade da sua empresa na mídia. Oferecemos estratégias personalizadas, identificação de oportunidades, elaboração de releases, relacionamento com jornalistas e gestão de crises, promovendo uma comunicação eficaz e positiva.</p>
     <a href="#">Saiba mais.</a>
 </div>
 
 <div class="card"  id="card9">
-    <img src="/assets/imagens/cardimgs/extra.png" alt="serviço4" id="img4">
-    <h1>extra</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quibusdam pariatur autem fugiat dolorem. Sit, voluptatibus a harum voluptatum omnis commodi saepe aspernatur enim ab laboriosam iusto quibusdam impedit doloremque.</p>
+    <img src="/assets/imagens/cardimgs/branding.png" alt="serviço4" id="img4">
+    <h1>Branding</h1>
+    <p>Elevamos a identidade da sua marca para novos patamares. Com estratégias impactantes, destacamos valores, criamos conexões emocionais e consolidamos uma presença memorável no mercado, proporcionando significado e confiança aos consumidores.</p>
     <a href="#">Saiba mais.</a>
 </div>
 </div>
