--- a/Home/index.html
+++ b/Home/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bridge | Assessoria Digital</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="/Home/style.css">
+    <link rel="stylesheet" href="/Home/responsive.css">
     <link rel="shortcut icon" href="assets/imagens/favicon.png" type="image/x-icon">
    
 </head>
 
 <header id="header">
-    <img id="logotipo" src="assets/imagens/logobridge.svg" alt="logotipo">
+    <img id="logotipo" src="/assets/imagens/logobridge.svg" alt="logotipo">
     <nav id="nav">
          <button id="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
             <span id="hamburguer"></span>
         </button>
         <ul id="menu" role="menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/Home/index.html">Home</a></li>
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="/projetos/projects.html">Projetos</a></li>
             <li><a href="/sobre/sobre.html">Sobre nós</a></li>
-            <li><a href="contato/contact.html">Contato</a></li>
+            <li><a href="/contato/contact.html">Contato</a></li>
         </ul>
     </nav>
 </header>
 <div class="container">
-    <img id="bannerPC" src="assets/imagens/bannerPC.png" alt="bannerPC">
-    <img id="bannerMobile" src="assets/imagens/bannerMobile.png" alt="bannerMobile">
+    <img id="bannerPC" src="/assets/imagens/bannerPC.png" alt="bannerPC">
+    <img id="bannerMobile" src="/assets/imagens/bannerMobile.png" alt="bannerMobile">
     <h1>venha</h1>
     <h3>ser</h3>
     <h2 id="typing-effect"></h2>
@@ -42,28 +42,28 @@
 
         <div class="cards">
             <div id="card1">
-                <img src="assets/imagens/cardimgs/idmarca.png" alt="serviço1" id="img1">
+                <img src="/assets/imagens/cardimgs/idmarca.png" alt="serviço1" id="img1">
                 <h1>Identidade de Marca.</h1>
                 <p>Criamos uma identidade visual única, refletindo a personalidade da sua marca com elementos visuais, storytelling e design digital para uma presença coesa e memorável.</p>
                 <a href="#">Saiba mais.</a>
             </div>
             
              <div id="card2">
-                <img src="assets/imagens/cardimgs/socialmedia.png" alt="serviço2" id="img2">
+                <img src="/assets/imagens/cardimgs/socialmedia.png" alt="serviço2" id="img2">
                 <h1>Social Media.</h1>
                 <p>Aprimoramos a mensagem, maximizando impacto com estratégias inovadoras e otimização de campanhas de mídia, focando em engajamento e resultados excepcionais.</p>
                 <a href="#">Saiba mais.</a>
             </div>
 
              <div id="card3">
-                <img src="assets/imagens/cardimgs/crescimento.png" alt="serviço3" id="img3">
+                <img src="/assets/imagens/cardimgs/crescimento.png" alt="serviço3" id="img3">
                 <h1>Crescimento Estratégico.</h1>
                 <p>Impulsionamos o seu negócio, desenvolvendo estratégias inteligentes para ampliar a presença e promover o crescimento sustentável no mercado.</p>
                 <a href="#">Saiba mais.</a>
             </div>
 
              <div id="card4">
-                <img src="assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
+                <img src="/assets/imagens/cardimgs/visibilidade.png" alt="serviço4" id="img4">
                 <h1>Visibilidade Online.</h1>
                 <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
                 <a href="#">Saiba mais.</a>
@@ -88,7 +88,7 @@
 
     <div class="projects" >
         <div id="projectdestaque" class="project" >
-            <a href="https://bridgedigital.myportfolio.com/arvoredo"><img src="assets/imagens/projetos/destaque.jpg" alt="projectdestaque"></a>
+            <a href="https://bridgedigital.myportfolio.com/arvoredo"><img src="/assets/imagens/projetos/destaque.jpg" alt="projectdestaque"></a>
             <h1>Arvoredo</h1>
             <p>Identidade Visual</p>
         </div>
@@ -96,37 +96,37 @@
         <div id="outhersprojects">
 
            <div id="projeto1" class="project" >
-            <a href="https://bridgedigital.myportfolio.com/aluma-construcao"><img src="assets/imagens/projetos/1.png" alt="project1"></a>
+            <a href="https://bridgedigital.myportfolio.com/aluma-construcao"><img src="/assets/imagens/projetos/1.png" alt="project1"></a>
             <h1>Aluma Construção</h1>
             <p>Design Digital</p>
            </div>
 
            <div id="projeto2" class="project" >
-            <a href="https://bridgedigital.myportfolio.com/hb-sound"><img src="assets/imagens/projetos/2.png" alt="project2"></a>
+            <a href="https://bridgedigital.myportfolio.com/hb-sound"><img src="/assets/imagens/projetos/2.png" alt="project2"></a>
             <h1>Hb Sound</h1>
             <p>Design Digital</p>
            </div>
 
            <div id="projeto3" class="project" >
-            <a href="https://bridgedigital.myportfolio.com/germano-portas"><img src="assets/imagens/projetos/3.png" alt="project3"></a>
+            <a href="https://bridgedigital.myportfolio.com/germano-portas"><img src="/assets/imagens/projetos/3.png" alt="project3"></a>
             <h1>Germano Portas</h1>
             <p>Identidade Visual</p>
            </div>
 
            <div id="projeto4" class="project" >
-            <a href="https://bridgedigital.myportfolio.com/arthur-reis"><img src="assets/imagens/projetos/4.png" alt="project4"></a>
+            <a href="https://bridgedigital.myportfolio.com/arthur-reis"><img src="/assets/imagens/projetos/4.png" alt="project4"></a>
             <h1>Arthur Reis</h1>
             <p>Design Digital</p>
            </div>
 
            <div id="projeto5" class="project" >
-            <a href="https://bridgedigital.myportfolio.com/tavares"><img src="assets/imagens/projetos/5.png" alt="project5"></a>
+            <a href="https://bridgedigital.myportfolio.com/tavares"><img src="/assets/imagens/projetos/5.png" alt="project5"></a>
             <h1>Tavares</h1>
             <p>Identidade Visual</p>
            </div>
 
            <div id="projeto6" class="project" >
-            <a href="https://bridgedigital.myportfolio.com/merusa-gollega"><img src="assets/imagens/projetos/6.png" alt="project6"></a>
+            <a href="https://bridgedigital.myportfolio.com/merusa-gollega"><img src="/assets/imagens/projetos/6.png" alt="project6"></a>
             <h1>Merusa Gollega</h1>
             <p>Design Digital</p>
            </div>
@@ -135,12 +135,12 @@
    
     <section>
       <footer class="top">
-        <img src="imagens/logobridge.svg" />
+        <img src="/imagens/logobridge.svg" />
         <div class="links">
           <div>
             <h2>Links Úteis</h2>
             <a href="index.html">Home</a>
-            <a href="servicos/servicos.html">Serviços</a>
+            <a href="/servicos/servicos.html">Serviços</a>
             <a>Projetos</a>
             <a>Sobre nós</a>
           </div>
@@ -159,9 +159,9 @@
           
         </div>
         <div class="links">
-          <a  href="https://www.instagram.com/bridgeassessoriadigital/" class="logo-insta"><img src="assets/imagens/redessociais/instagram.png" alt="instalogo" target="_blank" ></a>
-          <a class="logo-whats"><img src="assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
-          <a href="mailto:bridgeassessoriadigital@gmail.com" class="logo-email" target="_blank"><img src="assets/imagens/redessociais/email.png" alt="emailicon"></a>
+          <a  href="https://www.instagram.com/bridgeassessoriadigital/" class="logo-insta"><img src="/assets/imagens/redessociais/instagram.png" alt="instalogo" target="_blank" ></a>
+          <a class="logo-whats"><img src="/assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
+          <a href="mailto:bridgeassessoriadigital@gmail.com" class="logo-email" target="_blank"><img src="/assets/imagens/redessociais/email.png" alt="emailicon"></a>
         </div>
       </footer>
     </section>
@@ -174,6 +174,6 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="/Home/script.js"></script>
 </body>
 </html>
