--- a/contato/contact.html
+++ b/contato/contact.html
@@ -19,7 +19,7 @@
             <span id="hamburguer"></span>
         </button>
         <ul id="menu" role="menu">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/Home/index.html">Home</a></li>
             <li><a href="/servicos/servicos.html">Serviços</a></li>
             <li><a href="/projetos/projects.html">Projetos</a></li>
             <li><a href="/sobre/sobre.html">Sobre nós</a></li>
