--- a/servicos/servicos.html
+++ b/servicos/servicos.html
@@ -55,65 +55,65 @@
 <div class="cards">
     <div class="card" id="card1">
     <img src="/assets/imagens/cardimgs/devsites.png" alt="serviço7" id="img7">
-    <h1 id="">Criação de Sites</h1>
+    <h1 id="">Desenvolvimento de Sites</h1>
     <p>Desenvolvemos sites incríveis, desde landing pages até projetos mais complexos, para proporcionar uma presença online eficaz e atraente para o seu público-alvo.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Criação de Sites.">Saiba mais.</a>
 </div>
 
     <div class="card"  id="card2">
     <img src="/assets/imagens/cardimgs/designdigital.png" alt="serviço4" id="img4">
     <h1>Design Digital</h1>
     <p>Criamos experiências visuais que deixam uma marca duradoura. Dos pixels à emoção, nossos designs digitais não apenas atraem, mas também envolvem seu público, proporcionando uma presença online única e inesquecível.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Design Digital.">Saiba mais.</a>
 </div>
 
     <div class="card"  id="card3">
     <img src="/assets/imagens/cardimgs/crescimento.png" alt="serviço3" id="img3">
     <h1>Estratégia de alavancagem</h1>
     <p>Impulsionamos o seu negócio, desenvolvendo estratégias inteligentes para ampliar a presença e promover o crescimento sustentável no mercado.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Estratégia de Alavancagem.">Saiba mais.</a>
 </div>
 
     <div class="card"  id="card4">
     <img src="/assets/imagens/cardimgs/idmarca.png" alt="serviço1" id="imgcard">
     <h1 id="title-card">Identidade visual</h1>
     <p id="description-card">Criamos uma identidade visual única, refletindo a personalidade da sua marca com elementos visuais, storytelling e design digital para uma presença coesa e memorável.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Identidade visual.">Saiba mais.</a>
 </div>
 
     <div class="card"  id="card5">
     <img src="/assets/imagens/cardimgs/perform.png" alt="serviço4" id="img4">
     <h1>Performance Marketing</h1>
     <p>Mais do que campanhas, criamos experiências envolventes. Nosso foco é impulsionar o desempenho, gerando resultados tangíveis. Cada campanha é uma jornada estratégica que leva seus clientes a uma conexão mais profunda com sua marca.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Performance Marketing.">Saiba mais.</a>
 </div>
 
     <div class="card"  id="card6">
     <img src="/assets/imagens/cardimgs/socialmedia.png" alt="serviço2" id="img2">
     <h1>Social Media</h1>
     <p>Aprimoramos a mensagem, maximizando impacto com estratégias inovadoras e otimização de campanhas de mídia, focando em engajamento e resultados excepcionais.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Social Media.">Saiba mais.</a>
 </div>
 
     <div class="card"  id="card7">
     <img src="/assets/imagens/cardimgs/seo.png" alt="serviço4" id="img4">
     <h1>SEO/Tráfego pago</h1>
     <p>Elevamos a visibilidade online da sua marca, otimizando para mecanismos de busca e tráfego pago, garantindo notoriedade digital e atraindo tráfego qualificado.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de SEO/Tráfego pago.">Saiba mais.</a>
 </div>
 
  <div class="card"  id="card8">
     <img src="/assets/imagens/cardimgs/ass-imprensa.png" alt="serviço4" id="img4">
     <h1>Assessoria de Imprensa</h1>
     <p>A Bridge Assessoria Digital otimiza a visibilidade da sua empresa na mídia. Oferecemos estratégias personalizadas, identificação de oportunidades, elaboração de releases, relacionamento com jornalistas e gestão de crises, promovendo uma comunicação eficaz e positiva.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Assessoria de Imprensa.">Saiba mais.</a>
 </div>
 
 <div class="card"  id="card9">
     <img src="/assets/imagens/cardimgs/branding.png" alt="serviço4" id="img4">
     <h1>Branding</h1>
     <p>Elevamos a identidade da sua marca para novos patamares. Com estratégias impactantes, destacamos valores, criamos conexões emocionais e consolidamos uma presença memorável no mercado, proporcionando significado e confiança aos consumidores.</p>
-    <a href="#">Saiba mais.</a>
+    <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de saber mais sobre o serviço de Branding.">Saiba mais.</a>
 </div>
 </div>
 
@@ -125,15 +125,14 @@
             <h2>Links Úteis</h2>
             <a href="/index.html">Home</a>
             <a href="/servicos/servicos.html">Serviços</a>
-            <a>Projetos</a>
-            <a>Sobre nós</a>
+            <a href="../projetos/projects.html">Projetos</a>
+            <a href="../sobre/sobre.html">Sobre nós</a>
           </div>
           <div>
             <h2>Redes Sociais</h2>
             <a href="https://www.instagram.com/bridgeassessoriadigital/" target="_blank" >Instagram</a>
-            <a>Whatsapp</a>
+            <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de fazer um orçamento.">Whatsapp</a>
             <a href="mailto:bridgeassessoriadigital@gmail.com" target="_blank">Email</a>
-            <a>Linkedin</a>
           </div>
         </div>
       </footer>
@@ -144,7 +143,7 @@
         </div>
         <div class="links">
           <a  href="https://www.instagram.com/bridgeassessoriadigital/" class="logo-insta"><img src="/assets/imagens/redessociais/instagram.png" alt="instalogo" target="_blank" ></a>
-          <a class="logo-whats"><img src="/assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
+          <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de fazer um orçamento." class="logo-whats"><img src="/assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
           <a href="mailto:bridgeassessoriadigital@gmail.com" class="logo-email" target="_blank"><img src="/assets/imagens/redessociais/email.png" alt="emailicon"></a>
         </div>
       </footer>
@@ -152,7 +151,7 @@
     
       <!--Botão whatsapp-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="#" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de fazer um orçamento." target="_blank">
     <div class="btn-whatsapp pulsaDelay"><i class="fa fa-whatsapp"></i></div>
 </a>
 <script src="servicos.js"></script>
