--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -67,15 +67,15 @@
             <h2>Links Úteis</h2>
             <a href="/index.html">Home</a>
             <a href="/servicos/servicos.html">Serviços</a>
-            <a>Projetos</a>
-            <a>Sobre nós</a>
+            <a href="../projetos/projects.html" >Projetos</a>
+            <a href="../sobre/sobre.html" >Sobre nós</a>
           </div>
           <div>
             <h2>Redes Sociais</h2>
             <a href="https://www.instagram.com/bridgeassessoriadigital/" target="_blank" >Instagram</a>
-            <a>Whatsapp</a>
+            <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de fazer um orçamento." >Whatsapp</a>
             <a href="mailto:bridgeassessoriadigital@gmail.com" target="_blank">Email</a>
-            <a>Linkedin</a>
+            
           </div>
         </div>
       </footer>
@@ -86,7 +86,7 @@
         </div>
         <div class="links">
           <a  href="https://www.instagram.com/bridgeassessoriadigital/" class="logo-insta"><img src="/assets/imagens/redessociais/instagram.png" alt="instalogo" target="_blank" ></a>
-          <a class="logo-whats"><img src="/assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
+          <a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de fazer um orçamento." class="logo-whats"><img src="/assets/imagens/redessociais/whatsapp.png" alt="whatsalogo"></a>
           <a href="mailto:bridgeassessoriadigital@gmail.com" class="logo-email" target="_blank"><img src="/assets/imagens/redessociais/email.png" alt="emailicon"></a>
         </div>
       </footer>
@@ -94,7 +94,7 @@
     
       <!--Botão whatsapp-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<a href="#" target="_blank">
+<a href="https://api.whatsapp.com/send?phone=5511958441225&text=Olá! Gostaria de fazer um orçamento."  target="_blank">
     <div class="btn-whatsapp pulsaDelay"><i class="fa fa-whatsapp"></i></div>
 </a>
 <script src="sobre.js"></script>
