--- a/contato/contact.html
+++ b/contato/contact.html
@@ -13,7 +13,7 @@
 
 </head>
  <header id="header">
-    <img id="logotipo" src="/assets/imagens/logobridge.svg" alt="logotipo">
+    <a href="../index.html"><img id="logotipo" src="/assets/imagens/logobridge.svg" alt="logotipo"></a>
     <nav id="nav">
          <button id="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
             <span id="hamburguer"></span>
