--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <header id="header">
-    <img id="logotipo" src="assets/imagens/logobridge.svg" alt="logotipo">
+    <a href="#topo"><img id="logotipo" src="assets/imagens/logobridge.svg" alt="logotipo"></a>
     <nav id="nav">
          <button id="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
             <span id="hamburguer"></span>
@@ -25,7 +25,7 @@
         </ul>
     </nav>
 </header>
-<div class="container">
+<div id="topo" class="container">
     <img id="bannerPC" src="assets/imagens/bannerPC.png" alt="bannerPC">
     <img id="bannerMobile" src="assets/imagens/bannerMobile.png" alt="bannerMobile">
     <h1>venha</h1>
