--- a/projetos/projects.html
+++ b/projetos/projects.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header id="header">
-    <img id="logotipo" src="/assets/imagens/logobridge.svg" alt="logotipo">
+    <a href="../index.html"><img id="logotipo" src="/assets/imagens/logobridge.svg" alt="logotipo"></a>
     <nav id="nav">
          <button id="btn-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
             <span id="hamburguer"></span>
